--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9093
-server.servlet.context-path=/IngAccounts
+server.servlet.context-path=/ingbank
 ## Database Properties
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://15.206.73.122:3306/ingdb?autoReconnect=true&useSSL=false
