--- a/pom.xml
+++ b/pom.xml
@@ -83,13 +83,13 @@
 		</dependency>
 	</dependencies>
 	
-        <distributionManagement>
-  <snapshotRepository>
-    <id>nexus</id>
-    <url>http://13.233.88.62:8081/nexus/content/repositories/snapshots/</url>
-  </snapshotRepository>
+ <distributionManagement>
+    <snapshotRepository>
+        <id>artifactory</id>
+        <name>ip-172-31-2-66.ap-south-1.compute.internal-snapshots</name>
+        <url>http://13.233.104.128:8081/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
 </distributionManagement>
-
 
 	<build>
 		<plugins>
